# My-code

./: .gitignore
.cph/: .B_Before_an_Exam.cpp_e0fdc99c324eb4e675d0c4e2e1cc304a.prob  .Luogu_P_5318.cpp_792bd5356533558ffd32652048cd749f.prob  .P2888.cpp_c29c24d6e4245baf7291bab0d73f95c5.prob  .P_1001_A_B_Problem.cpp_899252cffde246edbf6d0cf856f7d28a.prob  .P_3375_KMP.cpp_c7ecdeea9ae061ae40177e8296e1b227.prob  .P_3375_模板_KMP.cpp_b81b3c99f16fb211d489eb8def35718e.prob
.leetcode/: 1.两数之和.cpp
c/: chartest.c  hello world.c  jiaogu.c  jitutonglong.c  listsort.c  mima.c  swap.c  test2.c  testT3.c  testT3.txt
c/vcpkgtest/: CMakeLists.txt  main.c  test_main.c
cpp/: Bubble_sort  Bubble_sort.cpp  Exp06-Enhance03.cpp  Insert_sort.cpp  Selection_sort.cpp  binary tree  binary tree.cpp  farleilisr  farleilisr.cpp  goods.cpp  goodsanswer.cpp  jjjj.cpp  juzhen(1).cpp  juzhen2(2).cpp  juzhen2.cpp  list.cpp  ten water.cpp  tenwatermap.cpp  (+1 more)
homework/oop/finalproject/cpp_version/: CMakeLists.txt  CMakePresets.json  build.sh  contianed_package_data.txt
homework/oop/finalproject/cpp_version/data/: admin_data.txt  contained_package_data.txt  customer_data.txt  data_generator_classversion.py  package_out_data.txt  test_worker.txt  user_data.txt  worker_data.txt
homework/oop/finalproject/cpp_version/include/: AdminManager.h  Container.h  CustomerManager.h  ExpressManager.h  Item.h  Manager.h  Manager.inl  Package.h  PackageManager.h  System.h  Ui.h  User.h  WorkerManager.h
homework/oop/finalproject/cpp_version/src/: Manager.cpp  Package.cpp  PackageManager.cpp  System.cpp  Ui.cpp  User.cpp  WorkerManager.cpp  main.cpp
(+212 files in other folders)
